# pendulum

lighthouse_sim/: CMakeLists.txt
lighthouse_sim/models/ball/: ball.sdf  model.config
lighthouse_sim/models/velodyne/: model.config  velodyne.sdf
lighthouse_sim/src/: Common.h  ContactPlugin.cc  RayPlugin.cc  RayPlugin.hh  ScanEvent.h  SyncEvent.h  TargetScan.cpp  TargetScan.h  lighthouse_sim.cpp  lighthouse_sim.h
lighthouse_sim/worlds/: light_house.world  module_test.world
matlab/: id_system.m
ros/: run_bridge.sh  run_copilot.sh  stop_bridge.sh  stop_copilot.sh
ros/attitude_control_demo/: CMakeLists.txt  package.xml
ros/attitude_control_demo/launch/: attitude_control.launch
ros/attitude_control_demo/src/: attitude_control_demo.cpp
ros/fmaros_msgs/: CMakeLists.txt  package.xml
ros/fmaros_msgs/msg/: PendulumPose.msg  VehiclePose.msg
ros/pendulum_ros/: CMakeLists.txt  package.xml
ros/pendulum_ros/cfg/: Pendulum.cfg
ros/pendulum_ros/lib/: ftf_frame_conversions.cpp  ftf_quaternion_utils.cpp
ros/pendulum_ros/src/: .PID.cpp.swp  pendulum_ctrl_att.cpp  pendulum_ctrl_att.h  (+6 more)
ros/pose_adapter/: CMakeLists.txt  package.xml
ros/simple_mission_demo/: CMakeLists.txt  package.xml
sitl_gazebo/: CMakeLists.txt  run_simulation.sh
sitl_gazebo/include/: gazebo_pendulum.h  gazebo_reset_plugin.h
sitl_gazebo/msgs/: CMakeLists.txt  PendulumPose.proto  Reset.proto  VehiclePendulumPose.proto  VehiclePose.proto
sitl_gazebo/src/: gazebo_imu_plugin.cpp  gazebo_motor_model.cpp  gazebo_pendulum.cpp  gazebo_reset_plugin.cpp
sitl_gazebo/worlds/: iris.world
(+24 files in other folders)
